--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Git project001</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, autem inventore ipsam, odit a nesciunt, voluptate animi velit aut quam ut. Molestiae ipsum nulla doloribus, suscipit numquam officia exercitationem debitis modi dolorum? Distinctio architecto aperiam, illo asperiores beatae sit dolore possimus saepe quam eaque consequatur temporibus corrupti aliquam odio cum?</p>
 <hr>    
+<p>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</p>
 <mark>Dark Mode</mark>
     <script src="app.js"></script>
 </body>
